# synbot

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  TESTING.md  build.rs  readme-zh-CN.MD  readme-zh.MD  readme.MD  test_sandbox_config.json
.github/workflows/: release.yml  sync-artifacts.yml  sync-code.yml
benches/: sandbox_benchmarks.rs
docs/: README.md  build-test.bat  deploy.js  fix-dead-links.js  fix-links.js  index.md  package-lock.json  package.json
docs/.vitepress/: config.js
docs/.vitepress/theme/: Layout.vue  index.js
docs/.vitepress/theme/components/: LanguageSwitcher.vue  ThemeToggle.vue
docs/.vitepress/theme/styles/: custom.css
docs/assets/css/: style.css
docs/assets/js/: navigation.js  theme.js
docs/developer-guide/: architecture.md  plugins.md
docs/en/: index.md
docs/en/developer-guide/: architecture.md
docs/en/examples/: basic-config.md
docs/en/getting-started/: configuration.md
docs/en/user-guide/: channels.md  permissions.md
docs/examples/: basic-config.md
docs/getting-started/: appcontainer-network-troubleshooting.md  cli-reference.md  configuration.md  first-steps.md  installation.md  running.md  sandbox.md
docs/user-guide/: channels.md  permissions.md  slash-commands.md  tools.md  workflow.md
docs/zh/: index.md
docs/zh/developer-guide/: architecture.md
docs/zh/examples/: basic-config.md
docs/zh/getting-started/: appcontainer-network-troubleshooting.md  cli-reference.md  configuration.md  first-steps.md  installation.md  running.md  sandbox.md
docs/zh/user-guide/: channels.md  permissions.md  slash-commands.md  tools.md  workflow.md
examples/: README.md  advanced_configuration.rs  basic_sandbox.rs  dual_layer_isolation.rs  generate_config_schema.rs  tool_execution.rs
examples/plugins/: README.md
examples/plugins/synbot-example-tool/: Cargo.toml
examples/plugins/synbot-example-tool/src/: lib.rs
plugins/base_tools_plugin/: Cargo.toml  README.md
plugins/base_tools_plugin/src/: lib.rs
proto/: pbbp2.proto
scripts/: run_benchmarks.sh
src/: appcontainer_dns.rs  background.rs  bus.rs  cli.rs  config.rs  heartbeat.rs  hooks.rs  lib.rs  logging.rs  main.rs  rig_provider.rs  url_utils.rs
src/agent/: agent_registry.rs  context.rs  control_commands.rs  directive.rs  embedded_tool_calls.rs  embeddings.rs  heartbeat_cron_cmd.rs  loop.rs  memory.rs  memory_backend.rs  memory_index.rs  mod.rs  role_registry.rs  session.rs  session_compactor.rs  session_id.rs  session_manager.rs  session_state.rs  skills.rs  subagent.rs  timestamp_serde.rs
src/channels/: approval_classifier.rs  approval_formatter.rs  approval_parser.rs  dingtalk.rs  dingtalk_stream.rs  discord.rs  email.rs  factory.rs  feishu.rs  feishu_api.rs  feishu_ws.rs  file_handler.rs  irc.rs  matrix.rs  mod.rs  slack.rs  telegram.rs  whatsapp.rs
src/cli/: agent.rs  cron.rs  doctor.rs  helpers.rs  mod.rs  onboard.rs  pairing.rs  sandbox_cmd.rs  service.rs  start.rs  tool_sandbox_cmd.rs
src/cron/: config_runner.rs  mod.rs  service.rs  types.rs
src/plugin/: abi.rs  adapters.rs  host_fns.rs  loader.rs  mod.rs
src/sandbox/: config.rs  error.rs  fallback.rs  gvisor_docker.rs  isolation.rs  macos_sandbox_exec.rs  manager.rs  mod.rs  monitoring.rs  nono.rs  performance.rs  plain_docker.rs  platform.rs  recovery.rs  sandbox_trait.rs  security.rs  tool_sandbox_delegate.rs  tool_sandbox_ipc.rs  types.rs  windows_appcontainer.rs  wsl2.rs
src/security/: mod.rs  secret_masker.rs
src/tools/: approval.rs  approval_store.rs  approval_tool.rs  browser.rs  code_analyzer.rs  context.rs  diff_viewer.rs  filesystem.rs  generation.rs  heartbeat_cron.rs  list_commands.rs  list_tools.rs  mcp.rs  memory_tool.rs  message.rs  mod.rs  permission.rs  session_tools.rs  shell.rs  skills_tool.rs  spawn.rs  truncation.rs  web.rs
src/web/: auth.rs  channel.rs  cors.rs  log_buffer.rs  mod.rs  server.rs  state.rs
src/web/handlers/: api.rs  config_redact.rs  mod.rs  sanitize.rs  static_files.rs  ws.rs
src/workflow/: generator.rs  mod.rs  pending_confirm.rs  pending_input.rs  runner.rs  store.rs  trigger.rs  types.rs
templates/: SOUL.md  USER.md  config.schema.json
templates/agent/: AGENTS.md  HEARTBEAT.md
templates/roles/dev/: AGENTS.md  IDENTITY.md  SOUL.md  TOOLS.md
templates/roles/main/: AGENTS.md  SOUL.md  TOOLS.md  USER.md
templates/skills/code-dev/: SKILL.md
templates/skills/find-skills/: SKILL.md
tests/: cli_smoke.rs  e2e.rs  integration.rs  plugin_tests.rs  proptest_smoke.rs  test_approval_api.rs  test_cross_platform_consistency.rs  test_discord_approval.rs  test_e2e_concurrent.rs  test_e2e_config_reload.rs  test_e2e_timeout.rs  test_e2e_web_approval.rs  test_feishu_approval.rs  test_logs_api.rs  test_sandbox_config.json  test_sandbox_core.rs  test_sandbox_integration.rs  test_telegram_approval.rs  web_api_tests.rs
tests/common/: mod.rs
tests/e2e/: agent_loop.rs  config_reload.rs
tests/integration/: channel_factory.rs  sandbox.rs
tools/benches/scripts/: analyze_benchmarks.py  run_benchmarks.bat
web/: THEME_GUIDE.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web-dashboard/: index.html  package-lock.json  package.json  vite.config.ts
web-dashboard/src/: App.tsx  index.css  main.tsx
web-dashboard/src/api/: client.ts
web-dashboard/src/components/: Header.tsx  ProtectedRoute.tsx
web-dashboard/src/hooks/: useWebSocket.ts
web-dashboard/src/pages/: Config.tsx  Overview.tsx  Roles.tsx  Sessions.tsx
web-dashboard/src/types/: api.ts  websocket.ts
web/src/: App.tsx  index.css  test-theme.html
web/src/api/: client.ts  index.ts
web/src/components/: ApprovalRequest.test.tsx  ApprovalRequest.tsx  Header.tsx  Layout.tsx  Sidebar.tsx  ThemePreview.tsx
web/src/contexts/: ThemeContext.tsx
web/src/hooks/: useTheme.ts  useWebSocket.ts
web/src/i18n/: I18nContext.tsx  index.ts
web/src/pages/: Channels.tsx  Chat.tsx  Config.tsx  CronJobs.tsx  Login.tsx  Logs.tsx  Overview.tsx  Roles.tsx  Sessions.tsx  Skills.tsx
web/src/test/: setup.ts
web/src/types/: api.ts  websocket.ts
(+23 files in other folders)
