[package]
name = "synbot"
version = "0.1.0"
edition = "2021"
description = "Personal AI assistant"
license = "MIT"

[features]
default = ["memory-index"]
memory-index = ["dep:rusqlite", "dep:sqlite-vec"]

[[bin]]
name = "synbot"
path = "src/main.rs"

[dependencies]
# LLM framework
rig-core = { version = "0.30", features = ["all"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization & config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP client (hickory-dns: use network DNS instead of system getaddrinfo; fixes WSAHOST_NOT_FOUND 11001 in AppContainer)
# rustls-tls: on macOS app sandbox we force rustls + webpki-roots only to avoid Security framework (OSStatus -9808)
reqwest = { version = "0.12", features = ["json", "hickory-dns", "rustls-tls"] }
# Explicit nameserver (8.8.8.8) when in AppContainer (see appcontainer_dns module)
hickory-resolver = "0.25"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }
tracing-appender = "0.2"
log = "0.4"

# Error handling
anyhow = "1"
thiserror = "2"

# Cron scheduling
cron = "0.15"

# feishu
open-lark = { version =  "0.14", features = ["bot", "im", "websocket"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async trait
async-trait = "0.1"

# WebSocket (use rustls + webpki-roots so macOS app sandbox works without Security framework / -9808)
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
url = "2"
idna = "0.2"

# Directory helpers
dirs = "6"

# UUID
uuid = { version = "1", features = ["v4"] }

# Glob pattern matching
glob = "0.3"

# Web server (Admin Dashboard)
actix = "0.13"
actix-web = "4"
actix-web-actors = "4"
actix-rt = "2"
rust-embed = "8"
mime_guess = "2"
base64 = "0.22"

# Memory index (vector + FTS5); disable with --no-default-features if build fails
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
sqlite-vec = { version = "0.1", optional = true }

# Encoding (Windows console output decoding)
encoding_rs = "0.8"

# Sandbox dependencies
num_cpus = "1"
bollard = "0.18"
nix = { version = "0.29", features = ["process", "sched", "mount", "user", "signal"] }

# nono: capability sandbox (Linux Landlock / macOS Seatbelt) for synbot sandbox
[target.'cfg(unix)'.dependencies]
nono = "0.6.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Isolation",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_JobObjects",
    "Win32_System_Memory",
    "Win32_System_Console",
    "Win32_System_Com",
    "Win32_System_Rpc",
    "Win32_NetworkManagement_WindowsFirewall",
    "Win32_NetworkManagement_WindowsFilteringPlatform",
] }

[dev-dependencies]
# Property-based testing
proptest = "1"
# Async test support
tokio-test = "0.4"
# Temporary directories for test isolation
tempfile = "3"
# Benchmarking
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
# Async utilities
futures-util = "0.3"

[[bench]]
name = "sandbox_benchmarks"
harness = false

[patch.crates-io]
open-lark = { path = "vendor/open-lark" }

# Examples
[[example]]
name = "basic_sandbox"
path = "examples/basic_sandbox.rs"

[[example]]
name = "tool_execution"
path = "examples/tool_execution.rs"

[[example]]
name = "dual_layer_isolation"
path = "examples/dual_layer_isolation.rs"

[[example]]
name = "advanced_configuration"
path = "examples/advanced_configuration.rs"
