[package]
name = "synbot"
version = "0.7.5"
edition = "2021"
description = "Personal AI assistant"
license = "MIT"

[features]
default = ["memory-index", "mcp"]
memory-index = ["dep:rusqlite", "dep:sqlite-vec"]
# MCP (Model Context Protocol) servers as tools
mcp = ["dep:mcp-client", "dep:mcp-spec"]
# Generate config JSON schema (e.g. cargo run --example generate_config_schema --features schema)
schema = ["dep:schemars"]

[build-dependencies]
prost-build = "0.13"

[[bin]]
name = "synbot"
path = "src/main.rs"

[dependencies]
# LLM framework
rig-core = { version = "0.30", features = ["all"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization & config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
# JSON Schema generation for config (optional, enable with feature "schema")
schemars = { version = "0.8", features = ["derive"], optional = true }

# HTTP client (hickory-dns: use network DNS instead of system getaddrinfo; fixes WSAHOST_NOT_FOUND 11001 in AppContainer)
# rustls-tls: on macOS app sandbox we force rustls + webpki-roots only to avoid Security framework (OSStatus -9808)
reqwest = { version = "0.12", features = ["json", "hickory-dns", "rustls-tls"] }
# Explicit nameserver (8.8.8.8) when in AppContainer (see appcontainer_dns module)
hickory-resolver = "0.25"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }
tracing-appender = "0.2"
log = "0.4"

# Error handling
anyhow = "1"
thiserror = "2"

# Cron scheduling
cron = "0.15"

# Feishu: WebSocket frame types from proto (no open-lark, no lark-websocket-protobuf), REST via feishu_api
prost = "0.13"
bytes = "1"

# Slack (Socket Mode)
slack-morphism = { version = "2.18", features = ["hyper"] }

# Matrix channel (matrix-sdk; minimal features, no E2EE/sqlite by default)
matrix-sdk = { version = "0.16", default-features = false, features = ["rustls-tls"] }

# Email channel (IMAP + SMTP)
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
imap-proto = "0.16"
native-tls = "0.2"
tokio-native-tls = "0.3"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1", "tokio1-native-tls"] }
mail-parser = "0.9"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async trait
async-trait = "0.1"

# WebSocket (use rustls + webpki-roots so macOS app sandbox works without Security framework / -9808)
# 0.28 shared with slack-morphism; rustls-tls-native-roots fixes wss Url(TlsFeatureNotEnabled)
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
url = "2"
idna = "0.2"

# Directory helpers
dirs = "6"
# Embed templates/roles at compile time (onboard)
include_dir = "0.7"

# UUID
uuid = { version = "1", features = ["v4"] }

# Glob pattern matching
glob = "0.3"

# Web server (Admin Dashboard)
actix = "0.13"
actix-web = "4"
actix-web-actors = "4"
actix-rt = "2"
rust-embed = "8"
mime_guess = "2"
base64 = "0.22"

# Memory index (vector + FTS5); disable with --no-default-features if build fails
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
sqlite-vec = { version = "0.1", optional = true }

# Encoding (Windows console output decoding)
encoding_rs = "0.8"

# Extism: load external Wasm plugins (tools, hooks, skills, background, provider)
extism = "1.13"

# MCP (Model Context Protocol): connect to MCP servers and expose their tools
mcp-client = { version = "0.1", optional = true }
mcp-spec = { version = "0.1", optional = true }

# Sandbox dependencies
num_cpus = "1"
bollard = "0.18"
nix = { version = "0.29", features = ["process", "sched", "mount", "user", "signal"] }

# nono: capability sandbox (Linux Landlock / macOS Seatbelt) for synbot sandbox
[target.'cfg(unix)'.dependencies]
nono = "0.6.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Isolation",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_JobObjects",
    "Win32_System_Memory",
    "Win32_System_Console",
    "Win32_System_Com",
    "Win32_System_Rpc",
    "Win32_NetworkManagement_WindowsFirewall",
    "Win32_NetworkManagement_WindowsFilteringPlatform",
] }

[dev-dependencies]
# Property-based testing
proptest = "1"
# Async test support
tokio-test = "0.4"
# Temporary directories for test isolation
tempfile = "3"
# Benchmarking
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
# Async utilities
futures-util = "0.3"

[[bench]]
name = "sandbox_benchmarks"
path = "tools/benches/sandbox_benchmarks.rs"
harness = false

# Examples
[[example]]
name = "basic_sandbox"
path = "examples/basic_sandbox.rs"

[[example]]
name = "tool_execution"
path = "examples/tool_execution.rs"

[[example]]
name = "dual_layer_isolation"
path = "examples/dual_layer_isolation.rs"

[[example]]
name = "advanced_configuration"
path = "examples/advanced_configuration.rs"

[[example]]
name = "generate_config_schema"
path = "examples/generate_config_schema.rs"
required-features = ["schema"]
