[package]
name = "synbot"
version = "0.11.0"
edition = "2021"
description = "Personal AI assistant"
license = "MIT"

[features]
default = ["memory-index", "mcp"]
memory-index = ["dep:rusqlite", "dep:sqlite-vec"]
# MCP (Model Context Protocol) servers as tools
mcp = ["dep:mcp-client", "dep:mcp-spec"]
# Generate config JSON schema (e.g. cargo run --example generate_config_schema --features schema)
schema = ["dep:schemars"]

[build-dependencies]
prost-build = "0.13"

[[bin]]
name = "synbot"
path = "src/main.rs"

[dependencies]
# LLM framework
rig-core = { version = "0.30", features = ["all"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization & config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
# JSON Schema generation for config (optional, enable with feature "schema")
schemars = { version = "0.8", features = ["derive"], optional = true }

# HTTP: rustls + webpki on macOS (see appcontainer_dns). Do not enable reqwest's hickory-dns globally — it reads system
# resolver config and fails with EPERM in macOS Seatbelt/some sandboxes; AppContainer uses GoogleDnsResolver via build_reqwest_client().
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
# Explicit nameserver (8.8.8.8) when in AppContainer (see appcontainer_dns module)
hickory-resolver = "0.25"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }
tracing-appender = "0.2"
log = "0.4"

# Error handling
anyhow = "1"
thiserror = "2"

# Cron scheduling
cron = "0.15"

# Feishu: WebSocket frame types from proto (no open-lark, no lark-websocket-protobuf), REST via feishu_api
prost = "0.13"
bytes = "1"

# Slack (Socket Mode)
slack-morphism = { version = "2.18", features = ["hyper"] }

# Matrix: rustls + E2EE + SQLite (state + crypto keys). bundled-sqlite avoids system libsqlite dev deps.
matrix-sdk = { version = "0.16", default-features = false, features = ["rustls-tls", "e2e-encryption", "bundled-sqlite"] }

# IRC channel
irc = { version = "1", default-features = false, features = ["tls-native"] }

# WhatsApp (WhatsApp Web multi-device via wa-rs)
wa-rs = { version = "0.2.0", default-features = true }

# Email channel (IMAP + SMTP)
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
imap-proto = "0.16"
native-tls = "0.2"
tokio-native-tls = "0.3"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1", "tokio1-native-tls"] }
mail-parser = "0.9"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async trait
async-trait = "0.1"

# WebSocket: use webpki-roots (not native-roots) so macOS App Sandbox works (no Security framework / "no native root CA certificates found")
# 0.28 shared with slack-morphism
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
url = "2"
idna = "0.2"

# Directory helpers
dirs = "6"
# Embed templates/roles at compile time (onboard)
include_dir = "0.7"

# Pairing code (MD5 prefix of chat id)
md5 = "0.7"

# UUID
uuid = { version = "1", features = ["v4"] }

# Glob pattern matching
glob = "0.3"

# Web server (Admin Dashboard)
actix = "0.13"
actix-web = "4"
actix-web-actors = "4"
actix-rt = "2"
rust-embed = "8"
mime_guess = "2"
base64 = "0.22"

# Memory index (vector + FTS5); disable with --no-default-features if build fails
rusqlite = { version = "0.37.0", features = ["bundled"], optional = true }
sqlite-vec = { version = "0.1", optional = true }

# Encoding (Windows console output decoding)
encoding_rs = "0.8"

# Extism: load external Wasm plugins (tools, hooks, skills, background, provider)
extism = "1.13"

# MCP (Model Context Protocol): connect to MCP servers and expose their tools
mcp-client = { version = "0.1", optional = true }
mcp-spec = { version = "0.1", optional = true }

# Sandbox dependencies
num_cpus = "1"
bollard = "0.18"
nix = { version = "0.29", features = ["process", "sched", "mount", "user", "signal"] }

# nono: capability sandbox (Linux Landlock / macOS Seatbelt) for synbot sandbox
[target.'cfg(unix)'.dependencies]
nono = "0.6.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Isolation",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_System_ProcessStatus",
    "Win32_System_JobObjects",
    "Win32_System_Memory",
    "Win32_System_Console",
    "Win32_System_Com",
    "Win32_System_Rpc",
    "Win32_NetworkManagement_WindowsFirewall",
    "Win32_NetworkManagement_WindowsFilteringPlatform",
] }

[dev-dependencies]
# Property-based testing
proptest = "1"
# Async test support
tokio-test = "0.4"
# Temporary directories for test isolation
tempfile = "3"
# Benchmarking
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
# Async utilities
futures-util = "0.3"
# LLM types for mock completion model in tests
rig-core = { version = "0.30", features = ["all"] }

[[bench]]
name = "sandbox_benchmarks"
path = "tools/benches/sandbox_benchmarks.rs"
harness = false

# Examples
[[example]]
name = "basic_sandbox"
path = "examples/basic_sandbox.rs"

[[example]]
name = "tool_execution"
path = "examples/tool_execution.rs"

[[example]]
name = "dual_layer_isolation"
path = "examples/dual_layer_isolation.rs"

[[example]]
name = "advanced_configuration"
path = "examples/advanced_configuration.rs"

[[example]]
name = "generate_config_schema"
path = "examples/generate_config_schema.rs"
required-features = ["schema"]
